--- a/src/components/ArticuleItems.css
+++ b/src/components/ArticuleItems.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 .Articule-itemstyle{
-    margin-top: 100px;
     margin-right: 30px;
     margin-left: 30px;
     margin-bottom: 100px;
@@ -61,22 +60,47 @@
         height: 170px;
     }
 
-    .Articule-blurb{
+  
+
+  .Articule-blurb{
         width: 280px; 
         height: 170px;
     }
+
 }
 
-@media only screen and (max-width: 1100px){
+@media only screen and (max-width: 1200px){
+
+    .Articule-img{
+        width: 280px;
+        height: 170px;
+    }
+
+    .Articule-blurb{
+        width: 260px; 
+        height: 170px;
+    }
+
+    .Articule-link{
+        margin-top: -20;
+        padding: 6px;
+        font-size: 18px;
+    }
+  
+}
+
+
+@media only screen and (max-width: 1000px){
 
     .Articule-itemstyle{
         margin: 0 auto;
+        width: 500px;
         margin-bottom: 80px;
     }
     
     .Articule-img{
         margin: 0;
-        width: 700px;
+        width: 500px;
         height: 300px;
     }
 
@@ -89,7 +113,7 @@
         margin: 0 auto;
         font-size: 18px;
         padding: 5px;
-        width: 600px; 
+        width: 490px; 
         height: 160px;
     }
 
@@ -107,12 +131,6 @@
     .Articule-img{
         width: 100%;
         
-    }
-
-
-    .Articule-blurb{
-        padding: 0px;
-       width: 700px;
     }
 
 }
