--- a/src/components/FeatureItems.css
+++ b/src/components/FeatureItems.css
@@ -86,19 +86,19 @@
 
 }
 
-@media only screen and (max-width: 1300px){
+ @media only screen and (max-width: 1200px){
     .Feature-itemstyle{
-        width: 800px;
+        width: 540px;
     }
 
-    .Feature-img {
-        width: 800px;
+     .Feature-img {
+        width: 540px;
         height: 350px;
     }
 
     .Feature-blurb { 
-        width: 770px;
-        height: 200px;
+        width: 510px;
+        height: 300px;
         padding-left: 20px;
         padding-right: 10px;
     }
@@ -106,11 +106,12 @@
     .Feature-link {
         text-align: center;
         display: block;
+        margin-top: 10px;
        
     }
 
 }
-
+ 
 
 
 @media only screen and (max-width: 1100px){
@@ -137,20 +138,36 @@
 
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 900px){
     .Feature-itemstyle{
-       width: 100%;
-     
+       width: 500px;
+       height: 300px;
     }
 
     .Feature-img {
         width: 100%;
+        height: 300px;
     }
 
     .Feature-blurb { 
-        width: 745px;
+        width: 470px;
+        height: 500px;
     }
   
+    .Feature-tag {
+        top: 150px;
+       
+    }
+    
+    .Feature-title {
+        top: 190px;
+      
+    }
 
+    .Feature-link {
+        background-color: white;
+        margin-top: -20px;
+       
+    }
 
 }
