--- a/src/components/Youtube.css
+++ b/src/components/Youtube.css
@@ -3,9 +3,14 @@
 .Youtube-Container {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 70px;
     width:  100%;
    
+}
+
+.Youtube-Content {
+
+    margin-right: 100px;
 }
 
 .Youtube-Container a {
@@ -58,12 +63,17 @@
 
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1100px) {
+
+    .Youtube-Content {
+        margin-right: 0;
+    }
 
     .Youtube-Container{
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 30px;
 
     }
 
@@ -95,10 +105,18 @@
 
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
 
     .Youtube-Box {
-        width: 780px;
+        width: 600px;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+    .Youtube-Box {
+        width: 550px;
     }
 
 }
