--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
+.AboutContent{
+    margin: 0 auto;
+}
+
 .About-container{
     margin: 0 auto;
 }
@@ -8,104 +12,59 @@
     font-family: 'Helvetica Neue';
     font-weight: 100;
     font-size: 70px;
-    text-align: start;
+    text-align: center;
     text-transform: uppercase;
     color: white;
-    width: 500px;
+    margin-top: 0px;
+    padding-top: 80px;
+    width: 100%;
     height: 70px;
-    margin-top: 100px;
-    margin-left: 110px;
-    margin-bottom: 0;
 }
 
 .About-subtitle {
     font-family: 'Oswald', sans-serif;
+    font-weight: 100;
     font-size: 20px;
     color: white;
-    margin-left: 250px;
     text-transform: uppercase;
     text-align: center;
-    margin-top: 5px;
-    width: 250px;
+    margin-top: 100px;
+    width: 100%;
     letter-spacing: 2px;
 }
 
-#DestinyJ2 {
-    width: 500px;
-    margin-left: 35%;
-    padding-right: 60px;
-    margin-top: 0;
-    height: 400px;
+
+
+
+.About-subtitle-a {
+    font-family: 'Helvetica Neue';
+    font-size: 20px;
+    font-weight: 100;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    margin-left: 47%;
+    margin-right: 47%;
+  
+    letter-spacing: 2px;
+    text-decoration: none;
 }
 
-.Resume {
-    text-decoration: none;
-    font-family: 'Helvetica Neue';
-    font-weight: 100;
-    font-size: 30px;
-    text-transform: uppercase;
-    width: 170px;
-    text-align: center;
-    color: white;
-    position: absolute;
-    border: 1px solid  #550584;
-    border-radius: 5px;
-    z-index: 3;
-    right: 120px;
-    top: 100px;
+.About-subtitle-a:hover {
+    color: black;
 }
+
 
 .Resume:hover {
     background-color: #550584;
 }
 
-@media only screen and (max-width: 1300px){
-    #DestinyJ2 {
-        width: 490px;
-        padding-right: 0px;
-    }
-
-    .About-title{
-        margin-left: 160px;
-        z-index: 1;
-    }
-
-    .Resume {
-        right: 50px;   
-    }
-}
-   
-@media only screen and (max-width: 1100px){
-    #DestinyJ2 {
-        margin-top: 7px;
-        margin-left: 30%;
-        width: 500px;
-        height: 393px;
-        display: none;
-    }
-
-    .About-title {
-        margin-left: -120%;
-        /* margin-left: -200px; 
-        font-size: 55px;
-        position: relative; */
-    }
-
-    .About-subtitle{
-        margin-top: 0;
-        margin-left: 0;
-    }
-
-    .Resume {
-        top: 240px; 
-        right: 40%;  
-    }
-}
 
 
-@media only screen and (max-width: 800px){
-    #DestinyJ2 {
-        margin-top: -50px;
-    }
 
-}
+@media only screen and (max-width: 601px){
+    .Body {
+        min-width: 600px;
+    }
+  
+  }
