--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -43,3 +43,11 @@
         width: 100%;
     }
 }
+
+
+@media only screen and (max-width: 601px){
+    .Body {
+        min-width: 600px;
+    }
+
+}
