--- a/src/components/FeatureItems.css
+++ b/src/components/FeatureItems.css
@@ -38,7 +38,6 @@
 }
 
 .Feature-blurb {
-    width: 840px;
     height: 200px;
     text-align: center;
     margin-top: -5px;
@@ -56,6 +55,7 @@
     text-decoration: none;
     display: block;
     padding-bottom: 20px;
+    margin-top: 100px;
     text-align: center;
     font-size: 18px;
     color: black;
@@ -78,7 +78,7 @@
     }
 
     .Feature-blurb { 
-        width: 570px;
+        width: 100%;
         height: 300px;
     }
 
@@ -97,7 +97,6 @@
     }
 
     .Feature-blurb { 
-        width: 510px;
         height: 300px;
         padding-left: 20px;
         padding-right: 10px;
@@ -106,7 +105,7 @@
     .Feature-link {
         text-align: center;
         display: block;
-        margin-top: 10px;
+        margin-top: 100px;
        
     }
 
@@ -125,7 +124,6 @@
     }
 
     .Feature-blurb { 
-        width: 770px;
         height: 300px;
     }
 
@@ -133,7 +131,7 @@
         text-align: center;
         display: block;
         font-size: 18px;
-       
+        margin-top: 50px;
     }
 
 }
@@ -150,7 +148,6 @@
     }
 
     .Feature-blurb { 
-        width: 470px;
         height: 500px;
     }
   
