--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -81,3 +81,10 @@
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 601px){
+    #Navigation-mini {
+        min-width: 600px;
+    }
+
+}
