--- a/src/components/ArticuleImageItem.css
+++ b/src/components/ArticuleImageItem.css
@@ -11,12 +11,15 @@
 
 .ArticuleImage-title{
     margin-top: 10;
+    min-width: 600px;
     background-color: white;
     text-align: center;
     text-transform: uppercase;
     font-size: 28px;
     font-family: 'Oswald', sans-serif;
 }
+
+
 
 .ArticuleImage-box{
     width: 40%;
@@ -29,11 +32,21 @@
         display: none;
     }
 
-    .ArticuleImage--itemstyle{
+    .ArticuleImage-itemstyle{
         width: 100%;
     }
     .ArticuleImage-img{
         width: 100%;
     }
 
+
+
 }
+
+@media only screen and (max-width: 601px){
+    .ArticuleImage-itemstyle {
+        min-width: 600px;
+    }
+
+}
+
