--- a/src/components/Articules.css
+++ b/src/components/Articules.css
@@ -5,6 +5,12 @@
   
 }
 
+.FeaturePage-blurb {
+  
+    min-width: 600px;
+
+}
+
 @media only screen and (max-width: 1100px) {
 
     .Articule-container {
