--- a/src/components/FeatureImageItems.css
+++ b/src/components/FeatureImageItems.css
@@ -1,6 +1,7 @@
 .FeatureImage-itemstyle{
     width: 90%;
     height: 400px;
+    min-width: 600px;
 }
 
 .FeatureImage-img {
@@ -29,6 +30,33 @@
     color: white;
     font-weight: 300;
 }
+
+@media only screen and (max-width: 1100px){
+    .FeatureImage-itemstyle{
+        margin: 0 auto;
+        width: 90%;
+        height: 400px;
+    }
+
+    .FeatureImage-img {
+        width: 100%;
+        height: 400px;
+    }
+}
+
+@media only screen and (max-width: 950px){
+    .FeatureImage-itemstyle{
+        margin: 0 auto;
+        width: 100%;
+        height: 400px;
+    }
+
+    .FeatureImage-img {
+        width: 100%;
+        height: 400px;
+    }
+}
+
 
 @media only screen and (max-width: 800px){
     .FeatureImage-itemstyle{
