--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,12 +3,14 @@
     padding-top: 40px;
     display: flex;
     justify-content: center;
-    
+    min-width: 600px;
+ 
 }
 
 .Footer-link {
-    width: 40px;
+    width: 50px;
     padding: 10px;
     margin: 0 auto;
     
 } 
+
